<resources>
    <string name="app_name">Magic 8 Ball</string>
    <string name="roll">ASK</string>
    <string name="question">Shake your phone or press "ASK"</string>
    <string name="background">background</string>
    <string name="background_switch">BackgroundSwitch</string>
    <string name="change_theme">Change theme</string>
	<string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
	<string name="messages_header">Messages</string>
	<string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
	<string name="signature_title">Your signature</string>
	<string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
	<string name="sync_title">Sync email periodically</string>
	<string name="attachment_title">Download incoming attachments</string>
	<string name="attachment_summary_on">Automatically download attachments for incoming emails
	</string>
	<string name="attachment_summary_off">Only download attachments when manually requested</string>
	<string name="settings_button">settingsButton</string>
	<string name="sound_header">Sound</string>
	<string name="music_title">Music</string>
	<string name="vibration_title">Vibration</string>
	<string name="font_header">Font</string>
	<string name="text_size">Text Size</string>
	<string name="intro_text">Shake your phone to reveal answer</string>
	<string name="contact">Contact</string> />
</resources>