<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

	<PreferenceCategory app:title="@string/sound_header">

		<SwitchPreferenceCompat
			app:key="music"
			app:title="@string/music_title"
			app:useSimpleSummaryProvider="true"
			app:icon="@drawable/music"/>

		<SwitchPreferenceCompat
			app:key="vibration"
			app:title="@string/vibration_title"
			app:useSimpleSummaryProvider="true"
			app:icon="@drawable/vibration"/>

	</PreferenceCategory>

	<PreferenceCategory app:title="@string/font_header">

		<SeekBarPreference app:key="text_size"
			app:title="@string/text_size"
			app:icon="@drawable/text_size2"/>
	</PreferenceCategory>

	<PreferenceCategory app:title="@string/contact">

		<Preference
			app:key="feedback"
			app:title="Send feedback"
			app:summary="Report technical issues or suggest new features"
			app:icon="@drawable/feedback" />
	</PreferenceCategory>

</PreferenceScreen>